--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,75 @@
         </section>
 
 
+        <section id="card-box">
+            <div class="container">
+
+                <div >
+                    <p class="subtitle">Favorite Brands</p>
+                    <h1 class="title">Your Favorite Brands Food Are Now On Sale</h1>
+                </div>
+
+                <div class="card-container">
+
+
+                   <div class="card">
+
+                    <div class="image-box">
+                        <img src="/assets/pizza.png" alt="">
+                    </div>
+                    <div class="shop">
+                        <span>Pizza Burg</span>
+                    </div>
+                    <h1 class="shop-title">Up To 50% Off</h1>
+                    <p class="shop-des">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+
+                   </div>
+                
+
+
+
+                   <div class="card">
+
+                    <div class="image-box">
+                        <img src="/assets/biriyani.png" alt="">
+                    </div>
+                    <div class="shop">
+                        <span>Pizza Burg</span>
+                    </div>
+                    <h1 class="shop-title">Up To 50% Off</h1>
+                    <p class="shop-des">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+
+                   </div>
+
+
+                    <div class="card">
+
+                    <div class="image-box">
+                        <img src="/assets/burger.png" alt="">
+                    </div>
+                    <div class="shop">
+                        <span>Pizza Burg</span>
+                    </div>
+                    <h1 class="shop-title">Up To 50% Off</h1>
+                    <p class="shop-des">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+
+                    </div>
+
+
+
+                </div>
+
+                <dir class="btn-box">
+                    <button class="cont-btn">Watch All Sells</button>
+                </dir>
+                
+
+
+
+            </div>
+        </section>
+
+
 
 
 
